--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         applicationId "com.joaocsousa.weatherapp"
@@ -12,6 +12,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        buildConfigField "String", "WEATHER_API_KEY", "\"$weatherApiKey\""
     }
     buildTypes {
         release {
@@ -27,11 +28,12 @@ dependencies {
     // utils
     compile "com.jakewharton:butterknife:${libraries.butterknife}"
     // rx
-    compile "io.reactivex:rxandroid:${libraries.rx}"
     compile "io.reactivex:rxjava:${libraries.rx}"
+    compile "io.reactivex:rxandroid:${libraries.rxandroid}"
     // di
     compile "com.google.dagger:dagger:${libraries.dagger}"
-    compile "com.google.dagger:dagger-compiler:${libraries.dagger}"
+    apt "com.google.dagger:dagger-compiler:${libraries.dagger}"
+    provided "javax.annotation:jsr250-api:${libraries.jsr250}"
     // api
     compile "com.squareup.okhttp3:okhttp:${libraries.okhttp}"
     compile "com.squareup.retrofit2:retrofit:${libraries.retrofit}"
